--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.3",
     "@mui/styled-engine-sc": "^5.6.1",
+    "@mui/styles": "^5.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,6 +16,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.1.0",
+    "react-horizontal-scrolling-menu": "^2.7.1",
     "react-login-modal": "^1.2.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
@@ -46,7 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "browser": {
-    "child_process": false
-  }
+  "license": "UNLICENSED"
 }
