--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.1",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.1.0",
