--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-query": "^3.38.1",
-    "svgo": "^2.8.0",
     "@develoka/angka-rupiah-js": "^1.0.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -25,10 +23,13 @@
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-login-modal": "^1.2.1",
     "react-modal": "^3.15.1",
+    "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.5",
+    "svgo": "^2.8.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
