--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.5",
     "svgo": "^2.8.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
